# gecco

./: .gitignore  LICENSE.txt  README.md  download_taskonomy.sh
gecco-jax/: README.md  pyproject.toml
gecco-jax/release-notebooks/: compute-sigma.ipynb  infer-and-view.ipynb
gecco-jax/src/gecco_jax/: __init__.py  benchmark.py  config.py  geometry.py  metrics.py  training.py  types.py
gecco-jax/src/gecco_jax/data/: __init__.py  lion.py  shapenet_vol.py  taskonomy.py  torch_shapenet.py  util.py
gecco-jax/src/gecco_jax/infer_unconditional/: __main__.py
gecco-jax/src/gecco_jax/models/: __init__.py  activation.py  diffusion.py  divergences.py  embed.py  feature_pyramid.py  gpt_init.py  mlp.py  normalization.py  ray.py  reparam.py  set_transformer.py  stochastic.py  util.py
gecco-jax/src/gecco_jax/train/: __main__.py
gecco-jax/src/gecco_jax/vis/: conditional3d.py  trajectories.py  vis2d.py  vis3d.py
gecco-torch/: README.md  pyproject.toml
gecco-torch/example_configs/: shapenet_airplane_unconditional.py  taskonomy_conditional.py
gecco-torch/notebooks/: find_hyperparameters.ipynb  inference.ipynb
gecco-torch/src/gecco_torch/: __init__.py  config.py  diffusion.py  ema.py  reparam.py  structs.py  vis.py
gecco-torch/src/gecco_torch/data/: __init__.py  h5.py  samplers.py  shapenet_cond.py  shapenet_unc.py  taskonomy.py
gecco-torch/src/gecco_torch/models/: activation.py  feature_pyramid.py  lift3d.py  linear_lift.py  mlp.py  normalization.py  ray.py  set_transformer.py  vsb.py
